Major refactor: Reproducibility, input validation, diagnostics, and modularization
- Fixed reproducibility by setting deterministic seeds for each replicate
- Added settings.R to handle default values and validate input
- Refactored function signatures to accept unified settings and results objects
- Updated output structure of infer_posterior() and run_replicates()
- Major rewrites to estimator.R to eliminate redundant code
- Moved the random walk method to mh.R, which will house all MH variants
- Rewrote bayes_sampler to improve clarity and structure
- Rewrote print_results() for cleaner output and expanded summaries
- Implemented acceptance tracking (per replicate and overall)
- Rewrote save_results() to match the new results format
- Moved and rewrote diagnostic plotting functions to diagnostics.R (more to come)
- Rewrote run.R to reflect the new package architecture

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,21 +1,20 @@
 useDynLib(bayesGT, .registration = TRUE)
 
-#bayes_sampler
-export(bayes_sampler)
+#settings
+export(create_settings)
 
 #estimator
 export(infer_posterior)
 export(run_replicates)
-export(compute_results)
 
 #results
 export(print_results)
-export(print_settings)
 export(save_results)
-export(plot_trace)
-export(plot_post_hist)
+export(diag_traceplot)
+export(diag_histogram)
+export(diag_beta_grid)
 
 # imports
 importFrom(stats, rnorm, runif, rbeta, rbinom, sd, quantile, dnorm)
 importFrom(graphics, par, abline, curve, hist)
-importFrom(utils, write.table)
+importFrom(utils, write.table, modifyList)
